Changelist: scrollbar for description only, long single words do not cause column to expand, and bugfix for empty password string.

--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
 table {
     width: 100%;
     border-collapse:collapse;
+    table-layout: fixed;
 }
 
 td {
     padding: 5px;
+    word-wrap: break-word;
 }
 
 tr {
